# cibook-python

./: README.md  pyproject.toml
images/: ch2_plot2-1.html  ch2_plot2-2.html  ch2_plot3.html  ch2_plot4.html  ch2_plot5.html  ch3_plot0.html  ch3_plot1.html  ch3_plot2.html  ch3_plot3.html  ch3_plot4.html  ch3_plot5.html  ch4_plot1.html  ch4_plot2.html  ch4_plot3.html  ch5_plot1.html  ch5_plot2.html  ch5_plot2_2.html  ch5_plot2_3.html  ch5_plot3.html  ch5_plot4.html
notebook/: ch1_bias.ipynb  ch2_regression.ipynb  ch2_voucher.ipynb  ch3_lalonde.ipynb  ch3_pscore.ipynb  ch4_did.ipynb
