[tool.poetry]
name = "cibook-python"
version = "0.1.0"
description = ""
authors = ["nekoumei"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
joblib = "^1.0.1"
numpy = "1.19.3"
pandas = "^1.3.2"
plotly = "^5.3.1"
rdata = "^0.5"
rpy2 = "^3.4.5"
scikit-learn = "^0.24.2"
scipy = "^1.7.1"
statsmodels = "^0.12.2"
tqdm = "^4.62.2"
jupyter = "^1.0.0"
lxml = "^4.6.3"
tfcausalimpact = "^0.0.6"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
